css/pages/home.css
#home {
    display: flex;
    align-items: center;
    gap: 2rem;
    min-height: calc(100svh - 125px);

    #home-cta {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 1rem;

        h1 {
            max-width: 17ch;
            color: var(--color-primary);
            font-size: clamp(2.6rem, 5vw, 4.5rem);
            line-height: 1.05;
        }

        p {
            max-width: 48ch;
            color: var(--color-text-light);
            font-size: 1.1rem;
            line-height: 1.7;
        }

        a {
            padding: .8rem 1.5rem;
            font-size: 1.2rem;
        }
    }

    #home-cat-hero {    
        height: 23vw;

        border-radius: 40% 10% 40% 40%;
    }
}

